Config ECR user

--- a/.github/workflows/delete-ecr.yaml
+++ b/.github/workflows/delete-ecr.yaml
@@ -29,7 +29,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
-      role-to-assume: ${{ secrets.aws_role }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: "ecr"
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
