--- a/.github/workflows/delete-eks-stationargocd-all.yaml
+++ b/.github/workflows/delete-eks-stationargocd-all.yaml
@@ -86,7 +86,7 @@ jobs:
     if: ${{ github.event.inputs.supervision == 'oui' }}
     with:
       environment: ${{ github.event.inputs.environment}}
-      role-to-assume: ${{ secrets.aws_role }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       region: ${{ github.event.inputs.region}}
       component: cloudwatchalarm
     secrets:
@@ -101,7 +101,7 @@ jobs:
     needs: destroy_station
     with:
       environment: ${{ github.event.inputs.environment}}
-      role-to-assume: ${{ secrets.aws_role }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       region: ${{ github.event.inputs.region}}
       component: stationdb_rds
     secrets:
@@ -115,7 +115,7 @@ jobs:
     needs: destroy_station
     with:
       environment: ${{ github.event.inputs.environment}}
-      role-to-assume: ${{ secrets.aws_role }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       region: ${{ github.event.inputs.region}}
       component: stationredis
     secrets:
@@ -129,7 +129,7 @@ jobs:
     needs: [destroy_station , delete_rds]
     with:
       environment: ${{ github.event.inputs.environment}}
-      role-to-assume: ${{ secrets.aws_role }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       region: ${{ github.event.inputs.region}}
       component: eks
     secrets:
@@ -143,7 +143,7 @@ jobs:
     if: ${{ always() && needs.delete_eks.result == 'success' }}
     with:
       environment: ${{ github.event.inputs.environment}}
-      role-to-assume: ${{ secrets.aws_role }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       region: ${{ github.event.inputs.region}}
       component: secrets
     secrets:
