--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -59,7 +59,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
-      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: networks
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -72,7 +72,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
-      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: secrets
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -85,7 +85,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
-      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: eks
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -99,7 +99,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
-      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: stationdb_rds
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -113,7 +113,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
-      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: stationredis
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -128,7 +128,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
-      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: cloudwatchalarm
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
