--- a/.github/workflows/delete-ecr.yaml
+++ b/.github/workflows/delete-ecr.yaml
@@ -33,4 +33,4 @@ jobs:
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+      aws_role: ${{ secrets.AWS_ROLE_DEVOPS_STATION_CI }}
