--- a/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
@@ -7,9 +7,7 @@ spec:
   # A deployment's specification really only 
   # has a few useful options
   
-  # 1. How many copies of each pod do we want?
-  replicas: {{ .Values.stationfront.nbReplicas }}
-
+ 
   # 2. Which pods are managed by this deployment?
   selector:
     # This must match the labels we set on the pod!
@@ -38,6 +36,10 @@ spec:
             value: {{ .Values.stationfront.oktaUrl | quote  }}
           - name: CONTEXT_BACK_URL
             value: {{ include "stationback.contextpath" . | quote }} 
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256mi
           livenessProbe:
             httpGet:
               scheme: HTTP
