Correction replicas non du a hpa

--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -59,6 +59,9 @@ spec:
           - name: REDIS_USESSL
             value: {{ .Values.stationredis.usessl | quote   }}
           resources:
+            limits:
+              cpu: 200m
+              memory: 1024mi
             requests:
               cpu: 100m
               memory: 512mi
