--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -27,6 +27,12 @@ spec:
         - name: stationback
           image: {{ template "stationback.image.label" . }} 
           imagePullPolicy: {{ .Values.stationback.image.pullPolicy | quote }}
+          securityContext:
+            capabilities:
+              drop:
+                - all
+              add:
+                - NET_BIND_SERVICE
           env: 
           - name: DB_TRAFSTAT_URL
             {{- if (ne .Values.stationdb.mode "externaldb")   }}
