--- a/kubernetesaws/helm/station/values.yaml
+++ b/kubernetesaws/helm/station/values.yaml
@@ -16,10 +16,10 @@ app:
 
 
 image:
-  tag: 1.0.10
+  tag: 1.1.0
 
   # Context path of the repo nexus url
-  repoNexusUrl: 'kagzouli'
+  repoNexusUrl: 'kagzouli3'
 
 
 stationredis:
