--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -507,4 +507,44 @@ jobs:
         run: argocd --core app sync --prune --retry-limit 2 -l exakaconsulting/strategy=refresh --insecure  
 
 
+  # Installation runners
+  install_runners:
+    runs-on: ubuntu-latest
+    needs: synchronize_application_argocd
+    if: ${{ always() && needs.synchronize_application_argocd.result == 'success' }}
+    steps:
+      
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v3
 
+
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
+          aws-region: ${{ github.event.inputs.region}}
+          role-duration-seconds: 3600
+          mask-aws-account-id: false
+      
+      - name: Connect EKS cluster
+        id: connect_eks_cluster
+        run: aws eks --region ${{ github.event.inputs.region}} update-kubeconfig --name station-eks-cluster
+
+
+      - name: Install Helm
+        run: |
+          curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
+
+      # Installation runner Github
+      - name: Installation Runners Github
+        id:  installation runners-github
+        run: |
+          helm upgrade -i runners-github ./runners-github \
+          --set app.applicationId="${{ secrets.APPLICATION_ID }}" \
+          --set app.applicationPrivateKey="${{ secrets.APPLICATION_PRIVATE_KEY }}"
