--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -548,3 +548,4 @@ jobs:
           helm upgrade -i runners-github ./runners-github \
           --set app.applicationId="${{ secrets.APPLICATION_ID }}" \
           --set app.applicationPrivateKey="${{ secrets.APPLICATION_PRIVATE_KEY }}"
+        working-directory: kubernetesaws/argocd
