--- a/kubernetesaws/argocd/runners-github/templates/action-runner-controller.yaml
+++ b/kubernetesaws/argocd/runners-github/templates/action-runner-controller.yaml
@@ -4,6 +4,7 @@ metadata:
   name: actions-runner-controller
   namespace: argocd
   annotations:
+    argocd.argoproj.io/sync-options: Replace=true
     argocd.argoproj.io/sync-wave: "6"
   
 spec:
@@ -28,6 +29,7 @@ spec:
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+    - Replace=true
 
     automated:
       prune: true
