--- a/kubernetesaws/argocd/shared/templates/cluster-autoscaler.yaml
+++ b/kubernetesaws/argocd/shared/templates/cluster-autoscaler.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: transverse
-  project: default
+  project: shared
   source:
     chart: cluster-autoscaler
     helm:
