--- a/kubernetesaws/argocd/applications/templates/station.yaml
+++ b/kubernetesaws/argocd/applications/templates/station.yaml
@@ -12,7 +12,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: stationdev
-  project: default
+  project: applications
   source:
     chart: station
     helm:
