Ajout custom runner

--- a/kubernetesaws/argocd/shared/templates/shared.yaml
+++ b/kubernetesaws/argocd/shared/templates/shared.yaml
@@ -10,6 +10,8 @@ spec:
   destinations:
     - server: "https://kubernetes.default.svc"
       namespace: "transverse"
+    - server: "https://kubernetes.default.svc"
+      namespace: "kube-system"
   clusterResourceWhitelist:
     - group: "*"
       kind: "*"
