Correction branche master

--- a/kubernetesaws/argocd/runners-github/templates/custom-runner.yaml
+++ b/kubernetesaws/argocd/runners-github/templates/custom-runner.yaml
@@ -14,7 +14,7 @@ spec:
   source:
     path: custom-runner-github
     repoURL: https://github.com/kagzouli/StationDemoProject/tree/master/kubernetesaws
-    targetRevision: main
+    targetRevision: master
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
