--- a/kubernetesaws/helm/station/templates/stationback-hpa.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-hpa.yaml
@@ -7,8 +7,8 @@ spec:
   minReplicas: {{ .Values.stationback.nbReplicas }}
   maxReplicas: 4
   scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
+    apiVersion: argoproj.io/v1alpha1
+    kind: Rollout
     name: stationback-deploy
   metrics:
   - type: Resource
