--- a/kubernetesaws/custom-runner-github/runner.yaml
+++ b/kubernetesaws/custom-runner-github/runner.yaml
@@ -2,6 +2,7 @@ apiVersion: actions.summerwind.dev/v1alpha1
 kind: Runner
 metadata:
   name: exaka-runner
+  namespace: cicd
 spec:
   repository: summerwind/actions-runner-controller
   env: []
