--- a/kubernetesaws/custom-runner-github/runner-deployment.yaml
+++ b/kubernetesaws/custom-runner-github/runner-deployment.yaml
@@ -8,6 +8,7 @@ spec:
   template:
     spec:
       repository: kagzouli/StationDemoProject
+      image: YOUR_CUSTOM_DOCKER_IMAGE
       labels:
         - station
         - deploy
