--- a/kubernetesaws/custom-runner-github/Dockerfile
+++ b/kubernetesaws/custom-runner-github/Dockerfile
@@ -8,5 +8,5 @@ RUN apt-get update \
 # Install Helm
 RUN curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 && chmod 700 get_helm.sh && ./get_helm.sh
 
-# Install docker
-RUN 
+# Install terraform 
+RUN wget https://releases.hashicorp.com/terraform/1.2.7/terraform_1.2.7_linux_amd64.zip && tar -xvzf terraform_1.2.7_linux_amd64.zip && mv terraform /usr/local/bin/terraform
