--- a/kubernetesaws/custom-runner-github/Dockerfile
+++ b/kubernetesaws/custom-runner-github/Dockerfile
@@ -1,10 +1,11 @@
 FROM ubuntu:20.04
 
-# Install bash and curl
+# Install tools
 RUN apt-get update \
    && apt-get -y install bash \
    && apt-get -y install curl \
-   && apt-get -y install wget  
+   && apt-get -y install wget \
+   && apt-get -y install unzip 
 
 # Install Helm
 RUN curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 && chmod 700 get_helm.sh && ./get_helm.sh
