--- a/kubernetesaws/custom-runner-github/Dockerfile
+++ b/kubernetesaws/custom-runner-github/Dockerfile
@@ -15,3 +15,8 @@ RUN wget https://releases.hashicorp.com/terraform/1.2.7/terraform_1.2.7_linux_am
     unzip terraform_1.2.7_linux_amd64.zip && \
     mv terraform /usr/local/bin/terraform && \
     rm -f rm terraform_1.2.7_linux_amd64.zip 
+
+# Install kubectl
+RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl && \
+    chmod +x kubectl && \ 
+    mv kubectl /usr/local/bin/kubectl
