--- a/.github/workflows/test-custom-runner.yaml
+++ b/.github/workflows/test-custom-runner.yaml
@@ -9,12 +9,10 @@ jobs:
     runs-on: self-hosted
     steps:
 
-      - name: Install Helm
-        run: |
-          curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-          chmod 700 get_helm.sh
-          ./get_helm.sh
-        
+      - name: Get kubectl version
+        id: get_kubectl_version
+        run: kubectl version
+
       - name: Get Helm version
         id: get_helm_version
         run: helm version
