--- a/kubernetesaws/custom-runner-github/runner-deployment-build.yaml
+++ b/kubernetesaws/custom-runner-github/runner-deployment-build.yaml
@@ -1,7 +1,7 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: exaka-runner-deployment
+  name: exaka-runner-build
   namespace: cicd
 spec:
   replicas: 1
