Add runner builld

--- a/.github/workflows/test-custom-runner.yaml
+++ b/.github/workflows/test-custom-runner.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   test: 
-    runs-on: [self-hosted , station , build ]
+    runs-on: [self-hosted , station , deploy ]
     steps:
 
       - name: Get kubectl version
