Modification pour gestion authMap

--- a/kubernetesaws/helm/transverse/templates/aws-auth-cm.yaml
+++ b/kubernetesaws/helm/transverse/templates/aws-auth-cm.yaml
@@ -12,10 +12,10 @@ data:
       groups:
         - system:masters
     - groups:
-        - system:bootstrappers
-        - system:nodes
+      - system:bootstrappers
+      - system:nodes
       rolearn: arn:aws:iam::{{ .Values.app.accountidentifier }}:role/aws-eks-nodes-role
-      username: system:node:{{EC2PrivateDNSName}}
+      username: system:node:{{ "{{" }}EC2PrivateDNSName}}
   mapUsers: |
     - userarn: arn:aws:iam::{{ .Values.app.accountidentifier }}:user/Kaka
       username: Kaka
